# log-analyser

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
crates/analyzer-cli/: Cargo.toml
crates/analyzer-cli/src/: main.rs
crates/analyzer-core/: Cargo.toml
crates/analyzer-core/benches/: parse.rs
crates/analyzer-core/src/: lib.rs
crates/analyzer-server/: Cargo.toml
crates/analyzer-server/src/: ai.rs  cache.rs  main.rs  ratelimit.rs
crates/analyzer-server/tests/: api.rs
src/: main.rs
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.tsx
