[workspace]
resolver = "2"
members = [
    "crates/analyzer-core",
    "crates/analyzer-cli",
    "crates/analyzer-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
analyzer-core = { path = "crates/analyzer-core" }
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
dotenvy = "0.15"
lru = "0.12"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "set-header", "timeout"] }

[profile.release]
lto = "thin"
codegen-units = 1
