[package]
name = "analyzer-server"
version.workspace = true
edition.workspace = true
description = "HTTP server wrapping the log analyzer"

[[bin]]
name = "log-analyzer-server"
path = "src/main.rs"

[dependencies]
analyzer-core.workspace = true
axum.workspace = true
dotenvy.workspace = true
lru.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
reqwest.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["multipart", "blocking"] }
tokio = { workspace = true, features = ["full"] }
